# pdr

./: .gitignore  LICENSE  MANIFEST.in  README.MD  README.rst  init.bat  init.sh  manage.py  setup.cfg  test.db
django_pdr/: README.MD  admin.py  apps.py  datasources.py  methods.py  models.py  views.py
django_pdr/js/: README.MD  bind-connection-tables.js  get-reflection-template.js  list_config.js  list_db_tables.js
django_pdr/management/commands/: export.py  import.py  pdr-reflect.py
django_pdr/sql/: README.MD  get_pk.sql
django_pdr/sql/mssql+pymssql/: delete_event_listener.sql
django_pdr/sql/mysql+mysqldb/: create_event_listener.sql  delete_event_listener.sql
django_pdr/sql/sqlite+pysqlite/: create_event_listener.sql  list_tables.sql
pdr/: README.MD  asgi.py  settings.py  urls.py  wsgi.py
reflector/: README.MD  admin.py  apps.py  datasources.py  methods.py  models.py  views.py
reflector/js/: README.MD  bind-connection-tables.js  get-broadcasting-template.js  get-reflection-template.js  list_config.js  list_db_tables.js
reflector/management/commands/: pdr-reflect.py
reflector/sql/: README.MD
reflector/sql/mssql+pymssql/: create_event_listener.sql  delete_event_listener.sql
reflector/sql/mysql+mysqldb/: delete_event_listener.sql
reflector/sql/postgresql/: create_event_listener.sql  delete_event_listener.sql
reflector/sql/sqlite+pysqlite/: create_event_listener.sql  delete_event_listener.sql
sql/: get_pk.sql  list_tables.sql
