[metadata]
name = django-pdr
version = 0.0
description = A Django app to create and manage live replications of SQL database tables.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/django-pdr/
author = Menas Erian
author_email = menas@portacode.com
license = Apache V2 License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.1
    django-ace >= 1.0.11
    psycopg2 >= 2.8.6
    pytz >= 2021.1
    SQLAlchemy >= 1.4.16
    django-pgcrypto >= 2.0.0
