[metadata]
name = django-pdr
version = 1.2.16
description = A Django app to create and manage live replications of SQL database tables.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/meena-erian/pdr
author = Meena (Menas) Erian
author_email = hi@menas.pro
license = Apache V2 License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.1
    django-ace >= 1.0.11
    psycopg2 >= 2.8.6
    pytz >= 2021.1
    SQLAlchemy == 1.4.45
    django-pgcrypto >= 2.0.0
    mysqlclient >= 2.0.3
    pymssql >= 2.1.5
